<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditTextPreference
        android:id="@+id/pincode_pref"
        android:title="@string/pref_pincode"
        android:key="@string/pref_pincode_key"
        android:defaultValue="@string/pref_pincode_default"
        android:singleLine="true"
        android:inputType="text" />

    <ListPreference
        android:title="@string/pref_temp"
        android:dialogTitle="@string/pref_temp"
        android:key="@string/pref_temp_key"
        android:entries="@array/pref_temp_entries"
        android:entryValues="@array/pref_temp_values"
        android:defaultValue="@string/pref_temp_default" />

    <CheckBoxPreference
        android:id="@+id/notification_pref"
        android:title="@string/pref_notification"
        android:key="@string/pref_notification_key"
        android:defaultValue="true"/>

</PreferenceScreen>